# DefensiveTokens

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml  run.sh  run_all.sh
checkpoints/defensive_tokens/: defensive_prefix.pt
data/: alpaca_farm_eval.jsonl
results/: eval_results.json  report.md  results.csv  summary.json
scripts/: build_defensive_dataset.py  evaluate.py  prepare_alpaca_farm_eval.py  self_label.py  train_defensive_tokens.py
src/: attacks.py  common.py  dataset.py  defenses.py  evaluation.py  evaluator.py  generation.py  model.py  report.py  training.py
