[project]
name = "llm-def"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "strong-reject",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]

[tool.uv.sources]
strong-reject = { git = "https://github.com/dsbowen/strong_reject.git", rev = "main" }
